--- a/scripts/docker/whatsapp/Dockerfile
+++ b/scripts/docker/whatsapp/Dockerfile
@@ -2,5 +2,4 @@ FROM buildkite/puppeteer
 RUN npm i whatsapp-web.js
 RUN npm i qrcode-terminal
 RUN npm i crummydb
-ADD whatsapp-web.js
-CMD node whatsapp-web.js
+CMD cd /var/whatsapp/ && node server.js
